Colaboratory를 통해 생성됨

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7Um4qzsH2C5msd3tGKHt8",
+      "authorship_tag": "ABX9TyPUZ/FJ7tG7etX6amssC01L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,45 +27,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f-7OPrTwBZux",
+        "id": "YAeu5leFVH1p",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0vEoVndg7z4h",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def gap(*agrs):\n",
-        "  a=max(agrs)\n",
-        "  b=min(agrs)\n",
-        "  return a-b"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Xqlufqbc8h9P",
-        "colab_type": "code",
-        "outputId": "454205bc-0d80-4d54-ca4f-d9c1b91fa2af",
+        "outputId": "ffbd27c9-23de-49f4-9b1b-942ca5d15523",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
       "source": [
-        "gap(1, 4, 6,8, 40)"
+        "import random   \n",
+        "random.randint(0,63)"
       ],
       "execution_count": 0,
       "outputs": [
@@ -73,57 +45,29 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "39"
+              "9"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "seOH661QAMyg",
-        "colab_type": "code",
-        "outputId": "51df5ef9-e6d4-49c5-9d45-48d327259c50",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
-      },
-      "source": [
-        "x=10\n",
-        "y=-20\n",
-        "a=x\n",
-        "x=y\n",
-        "y=a\n",
-        "print(x)\n",
-        "print(y)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "-20\n",
-            "10\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WtI2dtbHKAQp",
+        "id": "JMEoZKbyVODH",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "def a():  ///연습문제 7.14\n",
+        "  while True:\n",
+        "    n=random.randint(0,63)\n",
+        "    yield n\n",
+        "b=a()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -131,32 +75,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2xlSaKL9AY6F",
+        "id": "GQ3s1ma8Vw8A",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def concatenate(*args, separator):\n",
-        "  b=separator\n",
-        "  a=(args)\n",
-        "  return b.join(args)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xcCqYleZGtqQ",
-        "colab_type": "code",
-        "outputId": "472657b8-60dc-4bbe-87ee-69e3914205da",
+        "outputId": "9f856ef3-7600-4abb-dbeb-2814a4829d45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
       "source": [
-        "concatenate('가난하다고','해서','외로움을',separator='/')"
+        "next(b)"
       ],
       "execution_count": 0,
       "outputs": [
@@ -164,15 +92,71 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'가난하다고/해서/외로움을'"
+              "27"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4m6iz1F7Wasp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a=(e**3 for e in range (10000000))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MD-aHC-bXXZc",
+        "colab_type": "code",
+        "outputId": "ebced41b-100c-4f04-f90d-991e80bf199d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "next(a)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "27"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NoDhzzWnZFZi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "// 7.15 무슨 의미인지 모르겠다"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
